delete unused social

--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,11 @@ comment:
     
 # Social
 social:
-    weibo: webbleen
+    weibo: togopaul
     github: webbleen
-    twitter: webbleen
-    gplus: 107108267983477358170
+    # gitee: webbleen
+    # twitter: webbleen
+    # gplus: 107108267983477358170
     mail: webbleen@gmail.com
 
 # Google Analytics
